对f072的bootloader接收can数据解析修改

--- a/STM32F072C8T6_IAP/bootloader/User/STM32F072Demo.uvprojx
+++ b/STM32F072C8T6_IAP/bootloader/User/STM32F072Demo.uvprojx
@@ -431,6 +431,11 @@
               <FileType>1</FileType>
               <FilePath>..\HARDWARE\can_queue.c</FilePath>
             </File>
+            <File>
+              <FileName>protocol_parse.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\protocol_parse.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
