--- a/STM32F105R8T6_IAP/bootloader/USER/STM32F105Demo.uvprojx
+++ b/STM32F105R8T6_IAP/bootloader/USER/STM32F105Demo.uvprojx
@@ -421,6 +421,11 @@
               <FileType>1</FileType>
               <FilePath>..\HARDWARE\protocol_parse.c</FilePath>
             </File>
+            <File>
+              <FileName>iwdg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\iwdg.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -485,6 +490,11 @@
               <FileName>stm32f10x_flash.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\STM32F10x_FWLib\src\stm32f10x_flash.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32f10x_iwdg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\STM32F10x_FWLib\src\stm32f10x_iwdg.c</FilePath>
             </File>
           </Files>
         </Group>
