--- a/STM32F072C8T6_IAP/app/User/STM32F072Demo.uvprojx
+++ b/STM32F072C8T6_IAP/app/User/STM32F072Demo.uvprojx
@@ -80,7 +80,7 @@
             <nStopB2X>0</nStopB2X>
           </BeforeMake>
           <AfterMake>
-            <RunUserProg1>1</RunUserProg1>
+            <RunUserProg1>0</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
             <UserProg1Name>D:\mdk5\ARM\ARMCC\bin\fromelf.exe --bin --output $L@L.bin $L@L.axf</UserProg1Name>
             <UserProg2Name></UserProg2Name>
@@ -436,6 +436,11 @@
               <FileType>1</FileType>
               <FilePath>..\HARDWARE\protocol_parse.c</FilePath>
             </File>
+            <File>
+              <FileName>iwdg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\iwdg.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -475,6 +480,11 @@
               <FileName>stm32f0xx_flash.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\STM32F0xx_FWLib\src\stm32f0xx_flash.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32f0xx_iwdg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\STM32F0xx_FWLib\src\stm32f0xx_iwdg.c</FilePath>
             </File>
           </Files>
         </Group>
